--- a/scripts/base/themes/night-owl.css
+++ b/scripts/base/themes/night-owl.css
@@ -41,16 +41,7 @@
   --comments-color: #677677;
   --system-functions-color: #8aa9f9;
   --variable-color: #d8dbdf;
-  --system-functions-color: #8AA9F9;
-  --variable-color: #D8DBDF;
-  --affected-variable-color: #95D8C9;
-  --strings-color: #E6C594;
-  --constants-color: #EC6477;
-  --math-operators-color: #BF94E4;
-  --logical-operators-color: #BF94E4;
-  --separators-color: #D7DEEA;
-  --semicolons-color: #D7DEEA;
-  --brackets-color: #F9D849;
+  --declared-variable-color: violet;
   --affected-variable-color: #95d8c9;
   --strings-color: #e6c594;
   --constants-color: #ec6477;
