--- a/scripts/functions-editor/settings-styles/pro-syntax-higliting.css
+++ b/scripts/functions-editor/settings-styles/pro-syntax-higliting.css
@@ -2,3 +2,9 @@
   color: var(--affected-variable-color) !important;
   font-style: var(--italics) !important;
 }
+
+.cm-variable:first-child:has(+ .cm-operator),
+.cm-tab:first-child + .cm-variable:has(+ .cm-operator),
+.cm-tab:first-child + [class^="cm-tab"] + .cm-variable:has(+ .cm-operator) {
+  color: var(--declared-variable-color) !important;
+}
