--- a/scripts/functions-editor/settings-styles/close-button-select.css
+++ b/scripts/functions-editor/settings-styles/close-button-select.css
@@ -2,6 +2,6 @@
   display: inline-block !important;
 }
 
-#functionCancel {
+lyte-button[data-zcqa="cf_functionCancel"] {
   display: none !important;
 }
