Add Console Toggle Background Color Setting

--- a/scripts/base/themes/styles/minimalist.css
+++ b/scripts/base/themes/styles/minimalist.css
@@ -12,6 +12,7 @@
   --editor-footer-background-color: var(--primary-background-color) !important;
   --editor-code-line-numbers-background-color: var(--primary-background-color) !important;
   --editor-code-line-numbers-border-color: var(--primary-background-color) !important;
+  --editor-console-toggle-background-color: var(--secondary-background-color) !important;
 
   /* Buttons */
   --general-button-text-color: var(--primary-text-color) !important;
