--- a/scripts/base/themes/zoho-default-light.css
+++ b/scripts/base/themes/zoho-default-light.css
@@ -13,38 +13,40 @@
 
   /* Backgrounds */
   --primary-background-color: #ffffff;
-  --secondary-background-color: #ededed;
-  --tertiary-background-color: #f8f8f8;
-  --quaternary-background-color: #e0e0e0;
+  --secondary-background-color: #d2d2d2;
+  --tertiary-background-color: #e4e4e4;
+  --quaternary-background-color: #c2c2c2;
 
   --editor-header-background-color: #1f2843;
   --editor-header-border-color: #181f35;
-  --editor-header-shadow-color: #1f284350;
+  --editor-header-shadow-color: #2b334c50;
   --editor-footer-background-color: #ededed;
-  --editor-footer-border-color: #e0e0e0;
+  --editor-footer-border-color: #cccccc;
   --editor-code-line-numbers-background-color: #ededed;
-  --editor-code-line-numbers-border-color: #e0e0e0;
+  --editor-code-line-numbers-border-color: #cccccc;
+  --editor-console-toggle-background-color: #dfdfdf;
 
   /* Editor */
   --cursor-color: #1c1c1c;
-  --line-number-color: #858585;
-  --active-line-number-color: #4b4b4b;
+  --line-number-color: #747474;
+  --active-line-number-color: #0a0a0a;
   --active-line-background-color: #edf4ff;
   --selected-text-background-color: #e5e6f5;
-  --selected-searching-text-background-color: #e0e0e0;
-  --searching-text-background-color: #dbe9f5;
-  --indent-guides-color: #ededed;
-  --hint-matching-symbols-color: #cf9565;
-  --tooltip-border-color: #e0e0e0;
+  --selected-searching-text-background-color: #e7e7e7;
+  --searching-text-background-color: #4b98dc4d;
+  --indent-guides-color: #cecece;
+  --hint-matching-symbols-color: #be0f0f;
+  --tooltip-border-color: #c9c9c9;
 
   /* Syntax */
   --comments-color: #8b8983;
   --system-functions-color: #cf9565;
+  --system-flow-control-color: #9928df;
   --variable-color: #4b3fa5;
-  --affected-variable-color: #2f7093;
-  --declared-variable-color: violet;
+  --declared-variable-color: #4b3fa5;
+  --affected-variable-color: #167485;
   --strings-color: #c80808;
-  --constants-color: #c85283;
+  --constants-color: #b95c75;
   --math-operators-color: #6b6a69;
   --logical-operators-color: #6b6a69;
   --separators-color: #6b6a69;
@@ -55,67 +57,62 @@
   --nonmatching-brackets-text-color: #c33228;
 
   /* Buttons */
-  --general-button-text-color: #ffffff;
-  --general-normal-button-background-color: linear-gradient(0deg, #1e64fd, #2389ed);
-  --general-normal-button-border-color: #2a60d3;
-  --general-normal-button-shadow-color: #1649be;
-  --general-hover-button-background-color: linear-gradient(0deg, #0051ff, #2190ff);
-  --general-press-button-background-color: linear-gradient(0deg, #2a60d3, #0073ff);
-  --general-press-button-border-color: #2a60d3;
+  --general-button-text-color: #efefef;
+  --general-normal-button-background-color: linear-gradient(0deg, #2180ff, #31a3ee);
+  --general-normal-button-border-color: #2177e7;
+  --general-normal-button-shadow-color: #1766cd;
+  --general-hover-button-background-color: linear-gradient(0deg, #2177e7, #47b0f5);
+  --general-press-button-background-color: linear-gradient(0deg, #1766cd, #31a2ed);
+  --general-press-button-border-color: #1766cd;
 
   --close-button-text-color: #343b4d;
   --close-normal-button-background-color: linear-gradient(0deg, #e0e5ec, #fafcfe);
-  --close-normal-button-border-color: #314458;
+  --close-normal-button-border-color: #cfd4da;
   --close-normal-button-shadow-color: #c5cad0;
   --close-hover-button-background-color: linear-gradient(0deg, #cfd4da, #ffffff);
   --close-press-button-background-color: linear-gradient(0deg, #c5cad0, #f0f5fc);
-  --close-press-button-border-color: #ccd1d7;
+  --close-press-button-border-color: #c5cad0;
 
-  --save-arguments-button-text-color: #ffffff;
-  --save-arguments-normal-button-background-color: linear-gradient(0deg, #cfcfcf, #dcdcdc);
-  --save-arguments-normal-button-border-color: #d2d2d2;
-  --save-arguments-normal-button-shadow-color: #cccccc;
-  --save-arguments-hover-button-background-color: #d2d2d2;
-  --save-arguments-press-button-background-color: #cccccc;
-  --save-arguments-press-button-border-color: #cccccc;
+  --save-arguments-button-text-color: #efefef;
+  --save-arguments-normal-button-background-color: linear-gradient(0deg, #2180ff, #31a3ee);
+  --save-arguments-normal-button-border-color: #2177e7;
+  --save-arguments-normal-button-shadow-color: #1766cd;
+  --save-arguments-hover-button-background-color: linear-gradient(0deg, #2177e7, #47b0f5);
+  --save-arguments-press-button-background-color: linear-gradient(0deg, #1766cd, #31a2ed);
+  --save-arguments-press-button-border-color: #1766cd;
 
-  --safe-button-text-color: #ffffff;
-  --safe-normal-button-background-color: linear-gradient(0deg, #00a600, #00bc00);
-  --safe-normal-button-border-color: #019101;
-  --safe-normal-button-shadow-color: #006e00;
-  --safe-hover-button-background-color: linear-gradient(0deg, #029202, #00c000);
-  --safe-press-button-background-color: #029202;
-  --safe-press-button-border-color: #029202;
+  --safe-button-text-color: #efefef;
+  --safe-normal-button-background-color: linear-gradient(0deg, #009e00, #00b400);
+  --safe-normal-button-border-color: #018e01;
+  --safe-normal-button-shadow-color: #008200;
+  --safe-hover-button-background-color: linear-gradient(0deg, #018e01, #00b700);
+  --safe-press-button-background-color: linear-gradient(0deg, #008200, #009a00);
+  --safe-press-button-border-color: #008200;
 
-  --dangerous-button-text-color: #ffffff;
-  --dangerous-normal-button-background-color: linear-gradient(0deg, #d32f3d, #f33a4a);
-  --dangerous-normal-button-border-color: #cd1222;
-  --dangerous-normal-button-shadow-color: #9e0e1a;
-  --dangerous-hover-button-background-color: linear-gradient(0deg, #bf2b37, #ff3a4a);
-  --dangerous-press-button-background-color: #bf2b37;
-  --dangerous-press-button-border-color: #bf2b37;
+  --dangerous-button-text-color: #efefef;
+  --dangerous-normal-button-background-color: linear-gradient(0deg, #c92d3a, #e93745);
+  --dangerous-normal-button-border-color: #b62935;
+  --dangerous-normal-button-shadow-color: #ac2732;
+  --dangerous-hover-button-background-color: linear-gradient(0deg, #b62935, #f13645);
+  --dangerous-press-button-background-color: linear-gradient(0deg, #ac2732, #d92d3b);
+  --dangerous-press-button-border-color: #ac2732;
 
   /* Extension Pupup */
-  --extension-popup-glow-color: #767676;
+  --extension-popup-glow-color: #a1a1a1;
   --extension-popup-text-glow-blur-radius: 0px;
 
-  --extension-popup-switch-off-color: #aaaaaa;
-  --extension-popup-switch-on-primary-background-color: #c1c1c1;
-  --extension-popup-switch-on-secondary-background-color: #4b7a8d1a;
-  --extension-popup-switch-on-primary-shadow-color: #00000033;
-  --extension-popup-switch-on-secondary-shadow-color: #4d7a8d33;
-  --extension-popup-switch-on-text-color: #1a1a1a;
-  --extension-popup-switch-on-border-color: #89c2d966;
+  --extension-popup-switch-off-color: #a2a2a8;
+  --extension-popup-switch-on-primary-background-color: #8f8f8f;
+  --extension-popup-switch-on-secondary-background-color: #796f6f1a;
+  --extension-popup-switch-on-primary-shadow-color: #6d6d6d;
+  --extension-popup-switch-on-secondary-shadow-color: #72727233;
+  --extension-popup-switch-on-text-color: #2d2d2d;
+  --extension-popup-switch-on-border-color: #71717166;
 
   --extension-popup-dangerous-button-text-color: #ff2335;
   --extension-popup-dangerous-button-background-color: #ff2335;
 
   /* --- Other --- */
-
-  /* Fonts */
-  --editor-header-font-family: var(--editor-font-family);
-  --editor-footer-font-family: var(--editor-font-family);
-  --editor-buttons-font-family: var(--editor-font-family);
 
   /* Theme */
   --is-dark-theme: 0;
